# hosting-provider

./: .gitignore  docker-compose.yml  pyproject.toml  Отчет БД Шипилов К. Ю.docx
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  hardwares.py  plans.py  rentals.py  servers.py  users.py
backend/app/api/v1/schemas/: hardware.py  plan.py  rental.py  server.py  token.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: connector.py  factory.py  hardware_repository.py  plan_repository.py  rental_repository.py  server_repository.py  user_repository.py
backend/app/db/redis/: plan_cache.py  publisher.py  redis_client.py  token_repository.py
backend/app/dependencies/: actor.py  jwt.py  repositories_factory.py  services_factory.py
backend/app/models/: plan.py  rental.py  server.py  tokens.py  user.py
backend/app/services/: auth_service.py  factory.py  hardware_service.py  plan_service.py  rental_service.py  repositories_abc.py  server_service.py  user_service.py
backend/app/utils/: logger.py
backend/migrations/: ddl.sql  dml.sql
backend/tests/api/: conftest.py  test_auth.py
frontend/: .dockerignore  Dockerfile  pyproject.toml
frontend/src/: main.py
frontend/src/core/: config.py
frontend/src/db/: base.py  hardware_repository.py  rental_repository.py  server_repository.py  user_repository.py
frontend/src/migrations/: ddl.sql  dml.sql
frontend/src/models/: plan.py  rental.py  server.py  user.py
frontend/src/pages/: auth.py  plans.py  profile.py  rentals.py
frontend/src/services/: factory.py  hardware_service.py  plan_service.py  rental_service.py  repositories_abc.py  server_service.py  (+2 more)
k8s/backend/: backend-deployment.yml  backend-secret.yml  backend-service.yml
k8s/frontend/: deployment.yml  service.yml
k8s/postgres/: postgres-deployment.yml  postgres-secret.yml
k8s/redis/: redis-deployment.yml  redis-secret.yml
src/: main.py
src/core/: config.py  constants.py
src/db/: base.py  connection.py  connector.py  factory.py  hardware_repository.py  plan_repository.py  rental_repository.py  repositories_factory.py  server_repository.py  user_repository.py
src/migrations/: ddl.sql  dml.sql
src/models/: base.py  hardware.py  plan.py  rental.py  server.py  user.py
src/pages/: plans.py  rentals.py
src/routers/: users.py
src/schemas/: backup.py  base.py  hardware_config.py  plan.py  rental.py  server.py  user.py
src/services/: hardware_service.py  plan_service.py  rental_service.py  repositories_abc.py  server_service.py  user_service.py
(+39 files in other folders)
