[project]
name = "backend"
version = "0.1.0"
description = "Hosting Provider Rest API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.11"]

[tool.ruff]
line-length = 120
target-version = "py313"
include = ["app/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N"]
